# gz-console-thingy

./: .gitmodules  CMakeLists.txt  README.md
.run/: address-generator.run.xml  xinput9_1_0.run.xml
src/: addresses.cpp  addresses.h  allocator.h  graphics.cpp  graphics.h  input.cpp  input.h  log.cpp  log.h  main.cpp  patches.cpp  patches.h  util.h  vector.h
src/game/: character.h  debug_logger.h  device.h  environment_gfx.h  event_scheduler.h  game_object.h  game_world.h  input_manager.h  map.h  physics_system.h  player.h  player_info.h  player_manager.h  player_network.h  player_skills.h  shared_string.h  spawn_system.h  vehicle.h  vehicle_manager.h  weapon_consumption.h  world_time.h
src/game/data/: collectibles_data.h  data.h  data_funcs.h  spawnables_data.h  weather_data.h
src/game/data/spawnables/: buildings.h  deployables.h  machines.h  npcs.h  vehicles.h
src/game/util/: hash_utils.h
src/generator/: main.cpp
src/imgui/: ui.cpp  ui.h  ui_settings.cpp  ui_settings.h
src/imgui/fonts/: roboto-regular.cpp
src/imgui/ui_tabs/: player_tab.cpp  settings_tab.cpp  world_tab.cpp
src/patches/: building_patches.h  building_patches.md  cloud_patch.h  detection_patch.h  event_time_patch.h  health_patch.h  patch_group.h  patch_info.h  resource_patch.h  ui_patches.h  vehicle_patches.h
